fix(guess-the-word): avoid layout shift when showing correct word

--- a/vanilla/guess-the-word/src/styles/game-card/word.css
+++ b/vanilla/guess-the-word/src/styles/game-card/word.css
@@ -1,5 +1,5 @@
 .game-card .word {
-  gap: 0 1ch;
+  gap: 0 0.25ch;
 
   background-color: var(--slate-600);
   padding: 0.75rem;
@@ -7,11 +7,14 @@
   border: none;
   box-shadow: 0px 4px 0px 0px var(--slate-950);
 
+  text-align: center;
+
   font-size: var(--word-fs, 2rem);
   user-select: none;
 }
 
 .game-card .word__letter {
+  width: 1.25ch;
   transition: transform var(--letter-grow-duration) ease-in;
 }
 
